--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
+    "next-cloudinary": "^5.13.0",
     "next-themes": "^0.2.1",
     "query-string": "^8.1.0",
     "react": "^18",
