--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "next": "14.0.4",
     "next-cloudinary": "^5.13.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.24.1",
+    "openai-edge": "^1.2.2",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-spinners": "^0.13.8",
+    "replicate": "^0.18.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
