--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.49.2",
     "react-spinners": "^0.13.8",
     "replicate": "^0.18.1",
+    "stripe": "^14.12.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
